--- a/desafio-1/assets/css/template.css
+++ b/desafio-1/assets/css/template.css
@@ -61,7 +61,7 @@ nav a {
     font-family: var(--txt);
 }
 
-nav.active a,
+nav li.active a,
 nav a:hover {
     background-color: var(--cor2);
     color: var(--cor3);
@@ -130,6 +130,30 @@ section#banner {
 
 .banner3 {
     background-color: #2b4c99;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.banner_hour {
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 5px;
+}
+
+.banner_hour div.date {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+.border {
+    width: 200px;
+    height: 1px;
+    background-color: #36a8e154;
+    margin-top: 10px;
 }
 
 .banner_title {
@@ -150,6 +174,8 @@ section#banner {
     font-size: 13px;
     text-decoration: none;
 }
+
+
 
 /*------------------------------------------------*/
 
